IDA-2132 #comment styling changes?

--- a/public/presentation_viewer/presentations/default/css/bms_components.css
+++ b/public/presentation_viewer/presentations/default/css/bms_components.css
@@ -44,7 +44,7 @@
 
 /* ISI TRAY */
 .main-container .sidebar .logo {
-    background-image: url("../images/logo.jpg");
+    background-image: url("../images/logo.png");
 }
 
 .isi-html h3 {
