IDA-2132 #additional styling alignmnet

--- a/public/presentation_viewer/presentations/default/css/bms_components.css
+++ b/public/presentation_viewer/presentations/default/css/bms_components.css
@@ -1,7 +1,7 @@
 :root {
     /* GENERIC */
     --bms-brand-font-family: 'arial';
-    --bms-brand-main-color: #27649f;
+    --bms-brand-main-color: #003b5c;
     --bms-brand-secondary-color: #ffffff;
     --bms-brand-tri-color: #dc8633;
     --bms-brand-qauaternary-color: #008fb4;
